--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function colorClock(){
 	}
 	
 	var clockFace = hours + ':' + minutes + ':' + seconds;
-	var hexColor = '#' + minutes + hours + seconds;
+	var hexColor = '#' + hours + minutes + seconds;
 	
 	document.getElementById('clock').innerHTML = clockFace;
 	document.body.style.background = hexColor;
