--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html, body {
 
 
 #clock {
-	width: 250px;
+	width: 280px;
 	height: 80px;
 	border: 1px solid lightblue;
 	border-radius: 30%;
@@ -67,7 +67,7 @@ function colorClock(){
 	seconds = '0' + seconds;
 	}
 	
-	var clockFace = hours + ':' + minutes + ':' + seconds;
+	var clockFace = hours + '¤' + minutes + '¤' + seconds;
 	var hexColor = '#' + hours + minutes + seconds;
 	
 	document.getElementById('clock').innerHTML = clockFace;
@@ -81,7 +81,7 @@ function colorClock(){
 
 	colorClock();
 
-	document.getElementById('clock').style.background = 'lightblue'
+	document.getElementById('clock').style.background = 'gold'
 </script>
 </body>
 </html>
